refactor: 카테고리별 뉴스에서 원본 url을 반환하고 content가 html 태그를 포함하도록 수정